# solidutils

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  configure  doxygen.conf
include/: Alloc.hpp  BitArray.hpp  FixedSet.hpp  Random.hpp  UnitTest.hpp
solidutils/: Alloc.hpp  Array.hpp  ArrayUtils.hpp  BitArray.hpp  CMakeLists.txt  ConstArray.hpp  Debug.hpp  Exception.hpp  FastIntDistribution.hpp  FixedMap.hpp  FixedPriorityQueue.hpp  FixedSet.hpp  Geometry.hpp  Random.hpp  Sort.hpp  Timer.hpp  UnitTest.hpp  VectorMath.hpp
solidutils/test/: ArrayUtils_test.cpp  Array_test.cpp  BitArray_test.cpp  ConstArray_test.cpp  Debug_test.cpp  Exception_test.cpp  FastIntDistribution_test.cpp  FixedMap_test.cpp  FixedPriorityQueue_test.cpp  FixedSet_test.cpp  Geometry_test.cpp  Random_test.cpp  Sort_test.cpp  Timer_test.cpp  VectorMath_test.cpp
test/: ArrayUtils_test.cpp  CMakeLists.txt  FixedPriorityQueue_test.cpp
